--- a/packages/core/src/components/card/_card.scss
+++ b/packages/core/src/components/card/_card.scss
@@ -1,4 +1,6 @@
 @import '../../global/mixins/exports';
+@import '../../global/variables';
+@import '../../global/typography';
 
 @include exports('ray-card') {
   $card-padding: 1rem;
@@ -27,22 +29,14 @@
         outline: 0;
       }
 
-      &:hover {
-        &::after {
-          border-color: $ray-color-blue-50;
-        }
+      .#{$ray-class-prefix}card__heading {
+        color: $ray-color-blue-50;
       }
 
-      &::after {
-        content: '';
-        border: 1px solid transparent;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        border-radius: $ray-border-radius;
-        pointer-events: none;
+      &:hover {
+        .#{$ray-class-prefix}card__heading {
+          text-decoration: underline;
+        }
       }
     }
 
@@ -76,5 +70,9 @@
         border-top-right-radius: 0;
       }
     }
+  }
+
+  .#{$ray-class-prefix}card__heading {
+    @extend .ray-text--body-large;
   }
 }
