--- a/packages/core/src/ray-core.scss
+++ b/packages/core/src/ray-core.scss
@@ -10,6 +10,7 @@
 @import './components/card/card';
 @import './components/button/button';
 @import './components/radio-checkbox/radio-checkbox';
+@import './components/radio-pill/radio-pill';
 @import './components/form-item/form-item';
 @import './components/fieldset/fieldset';
 @import './components/text-field/text-field';
