--- a/packages/core/src/global/_variables.scss
+++ b/packages/core/src/global/_variables.scss
@@ -39,6 +39,11 @@ $ray-button-v-spacing-compact: rem(12px) - $ray-border-width;
 $ray-button-h-spacing: rem(24px) - $ray-border-width;
 $ray-button-h-spacing-compact: rem(12px) - $ray-border-width;
 
+$ray-radio-pill-v-spacing: rem(15px) - $ray-border-width;
+$ray-radio-pill-v-spacing-compact: rem(12px) - $ray-border-width;
+$ray-radio-pill-h-spacing: rem(12px) - $ray-border-width;
+$ray-radio-pill-h-spacing-compact: rem(8px) - $ray-border-width;
+
 $ray-layout-grid-breakpoints: (
   desktop: 1195px,
   tablet: 600px,
