feat(required): add required support to form input labels
for required text-field and selects, the label will automatically get an asterik *

--- a/packages/core/src/components/select/_select.scss
+++ b/packages/core/src/components/select/_select.scss
@@ -3,6 +3,7 @@
 
 @include exports('ray-select') {
   .#{$ray-class-prefix}select {
+    @include required-support('select');
     @include icon-support('select');
 
     border: $ray-border-width solid $ray-color-gray-60;
