--- a/packages/core/src/components/select/_select.scss
+++ b/packages/core/src/components/select/_select.scss
@@ -63,6 +63,12 @@
       }
     }
 
+    &--placeholder-mode {
+      .#{$ray-class-prefix}select__input {
+        color: rgba(0, 0, 0, 0);
+      }
+    }
+
     &--has-value {
       .#{$ray-class-prefix}select__label {
         @include label--active;
@@ -88,8 +94,22 @@
     &--active {
       border-color: $ray-color-blue-50;
 
+      .#{$ray-class-prefix}select__input {
+        color: $ray-color-black;
+      }
+
       .#{$ray-class-prefix}select__label {
         color: $ray-color-blue-50;
+      }
+
+      &.#{$ray-class-prefix}select--placeholder-mode {
+        .#{$ray-class-prefix}select__label {
+          @include label--active;
+        }
+
+        .#{$ray-class-prefix}select__input {
+          color: $ray-color-text-light;
+        }
       }
 
       &.#{$ray-class-prefix}select--has-value {
