--- a/packages/core/src/components/tag/_tag.scss
+++ b/packages/core/src/components/tag/_tag.scss
@@ -7,7 +7,7 @@
     border: 1px solid $ray-color-black;
     border-radius: $ray-border-radius;
     display: inline;
-    padding: $ray-spacing-3xs $ray-spacing-2xs;
+    padding: $ray-spacing-3xs $ray-spacing-xs;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 0.875rem;
