--- a/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
+++ b/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
@@ -89,17 +89,17 @@
         &:hover + .#{$ray-class-prefix}checkbox__label,
         &:hover + .#{$ray-class-prefix}radio__label {
           &::before {
-            background-color: $ray-color-white;
+            background-color: $ray-color-white !important;
           }
         }
 
         + .#{$ray-class-prefix}radio__label,
         + .#{$ray-class-prefix}checkbox__label {
           cursor: not-allowed;
-          color: $ray-color-gray-30;
+          color: $ray-color-gray-30 !important;
 
           &::before {
-            border-color: $ray-color-gray-30;
+            border-color: $ray-color-gray-30 !important;
           }
         }
       }
