--- a/packages/core/src/components/tag/_tag.scss
+++ b/packages/core/src/components/tag/_tag.scss
@@ -4,12 +4,23 @@
 @include exports('ray-tag') {
   .#{$ray-class-prefix}tag {
     font-family: $ray-font-stack-mono;
-    border: 1px solid $ray-color-black;
+    border: 1px solid $ray-color-gray-30;
     border-radius: $ray-border-radius;
     display: inline;
     padding: $ray-spacing-3xs $ray-spacing-xs;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 0.875rem;
+  }
+
+  a.#{$ray-class-prefix}tag {
+    border-color: $ray-color-black;
+    color: $ray-color-black;
+
+    &:hover {
+      border-color: $ray-color-blue-50;
+      color: $ray-color-blue-50;
+      text-decoration: none;
+    }
   }
 }
