--- a/packages/core/src/components/card/_card.scss
+++ b/packages/core/src/components/card/_card.scss
@@ -40,20 +40,50 @@
       }
     }
 
+    &--horizontal {
+      flex-direction: row;
+
+      .#{$ray-class-prefix}card__image,
+      .#{$ray-class-prefix}card__content {
+        width: 50%;
+        float: left;
+      }
+
+      .#{$ray-class-prefix}image--16by9 {
+        padding-bottom: calc(50% / (16 / 9));
+      }
+
+      .#{$ray-class-prefix}card__content {
+        padding: 33px;
+      }
+
+      .#{$ray-class-prefix}card__content:last-child {
+        border-top: $ray-border-width solid $ray-color-gray-10;
+        border-bottom-right-radius: $ray-border-radius;
+        border-top-right-radius: $ray-border-radius;
+        border-bottom-left-radius: 0;
+        border-left: 0;
+      }
+
+      .#{$ray-class-prefix}card__heading {
+        font-size: 2rem;
+      }
+    }
+
     &__content {
       flex-grow: 1;
       padding: $card-padding;
-      border-left: 1px solid $ray-color-gray-10;
-      border-right: 1px solid $ray-color-gray-10;
+      border-left: $ray-border-width solid $ray-color-gray-10;
+      border-right: $ray-border-width solid $ray-color-gray-10;
 
       &:first-child {
-        border-top: 1px solid $ray-color-gray-10;
+        border-top: $ray-border-width solid $ray-color-gray-10;
         border-top-left-radius: $ray-border-radius;
         border-top-right-radius: $ray-border-radius;
       }
 
       &:last-child {
-        border-bottom: 1px solid $ray-color-gray-10;
+        border-bottom: $ray-border-width solid $ray-color-gray-10;
         border-bottom-left-radius: $ray-border-radius;
         border-bottom-right-radius: $ray-border-radius;
       }
