--- a/packages/core/src/global/_base.scss
+++ b/packages/core/src/global/_base.scss
@@ -14,7 +14,7 @@
     text-rendering: optimizeLegibility;
     font-weight: 400;
     font-size: 1rem;
-    line-height: 1.75rem;
+    line-height: $ray-base-line-height;
   }
 
   * {
