feat(card): add ray-card--row (#101)
* feat(card): add a card--horizontal modifier

* fix(card): change name to row instead of horiztonal

* fix(card): remove some unneeded custom styles

* fix(card): fix typo and add a story

* fix(card): oop forgot to add image

* fix(card-row): add image on right support, add heading h2 styles

* fix(card-row): stack on mobile/tablet

* fix(ray-card): add support for all ratios

* fix(ray-card): add support for bg images

* chore: add responsive snapshots

--- a/packages/core/src/components/card/_card.scss
+++ b/packages/core/src/components/card/_card.scss
@@ -40,20 +40,86 @@
       }
     }
 
+    $ray-image-ratio-map-half: (
+      4by3: calc(50% / (4 / 3)),
+      3by4: calc(50% / (3 / 4)),
+      1by1: calc(50% / 1),
+      16by9: calc(50% / (16 / 9)),
+      cinema: calc(50% / 2.4)
+    );
+
+    &--row {
+      @media (min-width: map-get($ray-layout-grid-breakpoints, desktop)) {
+        @each $ratio, $value in $ray-image-ratio-map-half {
+          .#{$ray-class-prefix}image--#{$ratio} {
+            padding-bottom: $value;
+          }
+        }
+
+        @each $ratio, $value in $ray-image-ratio-map-half {
+          .#{$ray-class-prefix}bg--#{$ratio} {
+            padding-bottom: $value;
+          }
+        }
+
+        .#{$ray-class-prefix}card__content {
+          padding: 2.5rem;
+
+          &:first-child {
+            border: $ray-border-width solid $ray-color-gray-10;
+            border-right: 0;
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: $ray-border-radius;
+            border-top-right-radius: 0;
+            border-top-left-radius: $ray-border-radius;
+          }
+
+          &:last-child {
+            border-top: $ray-border-width solid $ray-color-gray-10;
+            border-bottom-right-radius: $ray-border-radius;
+            border-top-right-radius: $ray-border-radius;
+            border-bottom-left-radius: 0;
+            border-left: 0;
+          }
+        }
+
+        flex-direction: row;
+
+        .#{$ray-class-prefix}card__image,
+        .#{$ray-class-prefix}card__content {
+          width: 50%;
+        }
+
+        .#{$ray-class-prefix}card__heading {
+          @include ray-h2;
+        }
+
+        .#{$ray-class-prefix}card__image {
+          &:first-child {
+            border-top-right-radius: 0;
+          }
+
+          &:last-child {
+            border-bottom-left-radius: 0;
+          }
+        }
+      }
+    }
+
     &__content {
       flex-grow: 1;
       padding: $card-padding;
-      border-left: 1px solid $ray-color-gray-10;
-      border-right: 1px solid $ray-color-gray-10;
+      border-left: $ray-border-width solid $ray-color-gray-10;
+      border-right: $ray-border-width solid $ray-color-gray-10;
 
       &:first-child {
-        border-top: 1px solid $ray-color-gray-10;
+        border-top: $ray-border-width solid $ray-color-gray-10;
         border-top-left-radius: $ray-border-radius;
         border-top-right-radius: $ray-border-radius;
       }
 
       &:last-child {
-        border-bottom: 1px solid $ray-color-gray-10;
+        border-bottom: $ray-border-width solid $ray-color-gray-10;
         border-bottom-left-radius: $ray-border-radius;
         border-bottom-right-radius: $ray-border-radius;
       }
