feat: support right-to-left languages
This makes the Ray component styles sensitive to direction, such that components will render in the
expected orientation for right-to-left languages. Ideally, this would have been done using CSS' new
Logical Properties, but support for these is not pervasive yet, so style overrides are applied using
parent selectors wherever a left-right asymmetrical style is applied. The examples have been
extended to show every component with Hebrew right-to-left rendering.

BREAKING CHANGE: Component modifiers that ended in "left" or "right" have been changed to "start"
and "end" respectively, to communicate the alignment relative to the expected flow of text in the
host language. All examples have been updated, but any clients using Ray will likely need to be
updated. Alternatively, we could temporarily alias make "left" == "start" and "right" == "end"
semantically, until we can fully deprecate those styles.

--- a/packages/core/src/components/breadcrumb/_breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/_breadcrumb.scss
@@ -20,13 +20,24 @@
     &:not(:last-child) {
       margin-right: 0.5rem;
 
+      [dir='rtl'] & {
+        margin-right: 0;
+        margin-left: 0.5rem;
+      }
+
       &::after {
         margin-left: 0.5rem;
-        content: '➝';
+        content: '→';
         font-size: 1.25rem;
         position: relative;
         top: -6px;
         line-height: 1.5;
+
+        [dir='rtl'] & {
+          margin-right: 0.5rem;
+          margin-left: 0;
+          content: '←';
+        }
       }
     }
 
