--- a/packages/core/src/components/button/_button.scss
+++ b/packages/core/src/components/button/_button.scss
@@ -29,14 +29,29 @@
 
     &:not(:last-of-type) {
       margin-right: 1rem;
+
+      [dir='rtl'] & {
+        margin-right: 0;
+        margin-left: 1rem;
+      }
     }
 
-    &--pull-left {
+    &--pull-start {
       margin-left: -($ray-button-h-spacing + $ray-border-width);
+
+      [dir='rtl'] & {
+        margin-left: 0;
+        margin-right: -($ray-button-h-spacing + $ray-border-width);
+      }
     }
 
-    &--pull-right {
+    &--pull-end {
       margin-right: -($ray-button-h-spacing + $ray-border-width);
+
+      [dir='rtl'] & {
+        margin-right: 0;
+        margin-left: -($ray-button-h-spacing + $ray-border-width);
+      }
     }
   }
 
@@ -141,12 +156,22 @@
     line-height: 1;
     height: auto;
 
-    &.#{$ray-class-prefix}button--pull-left {
+    &.#{$ray-class-prefix}button--pull-start {
       margin-left: -($ray-button-h-spacing-compact + $ray-border-width);
+
+      [dir='rtl'] & {
+        margin-left: inherit;
+        margin-right: -($ray-button-h-spacing-compact + $ray-border-width);
+      }
     }
 
-    &.#{$ray-class-prefix}button--pull-right {
+    &.#{$ray-class-prefix}button--pull-end {
       margin-right: -($ray-button-h-spacing-compact + $ray-border-width);
+
+      [dir='rtl'] & {
+        margin-right: inherit;
+        margin-left: -($ray-button-h-spacing-compact + $ray-border-width);
+      }
     }
   }
 
@@ -201,6 +226,11 @@
 
   &:last-child {
     margin-left: 0.5rem;
+
+    [dir='rtl'] & {
+      margin-left: 0;
+      margin-right: 0.5rem;
+    }
   }
 
   svg {
