--- a/packages/core/src/components/table/_table.scss
+++ b/packages/core/src/components/table/_table.scss
@@ -16,6 +16,10 @@
     text-align: left;
     text-transform: uppercase;
     padding: 1rem 0;
+
+    [dir='rtl'] & {
+      text-align: right;
+    }
   }
 
   tr {
