--- a/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
+++ b/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
@@ -31,6 +31,11 @@
         margin-right: 1rem;
         // centers the input with the first line of text in the label
         top: $ray-radio-checkbox-top-offset;
+
+        [dir='rtl'] & {
+          margin-right: 0;
+          margin-left: 1rem;
+        }
       }
 
       &:focus {
