--- a/packages/core/src/components/select/_select.scss
+++ b/packages/core/src/components/select/_select.scss
@@ -13,10 +13,15 @@
     height: $ray-field-height;
     display: flex;
 
-    &__icon--right {
+    &__icon--end {
       @include icon;
       // need to add spacing to compensate for the arrow
       right: calc(#{$ray-field-h-spacing} * 2 + 12px);
+
+      [dir='rtl'] & {
+        right: 0;
+        left: calc(#{$ray-field-h-spacing} * 2 + 12px);
+      }
     }
 
     &::after {
@@ -33,6 +38,11 @@
       border-right: 6px solid transparent;
       border-top: 8px solid $ray-color-gray-60;
       border-radius: 2px;
+
+      [dir='rtl'] & {
+        position: unset;
+        margin-left: $ray-field-h-spacing;
+      }
     }
 
     &__label {
