fix: update base line-height

--- a/packages/core/src/components/tag/_tag.scss
+++ b/packages/core/src/components/tag/_tag.scss
@@ -11,6 +11,7 @@
     text-transform: uppercase;
     font-weight: 400;
     font-size: 0.875rem;
+    line-height: 1.5;
   }
 
   a.#{$ray-class-prefix}tag {
