fix(tag): update style

--- a/packages/core/src/components/tag/_tag.scss
+++ b/packages/core/src/components/tag/_tag.scss
@@ -7,11 +7,10 @@
     border: 1px solid $ray-color-gray-30;
     border-radius: $ray-border-radius;
     display: inline-block;
-    padding-left: $ray-spacing-xs;
-    padding-right: $ray-spacing-xs;
+    padding: 0.125rem $ray-spacing-xs;
     text-transform: uppercase;
     font-weight: 400;
-    font-size: 0.875rem;
+    font-size: 0.75rem;
     line-height: 1.5;
   }
 
