--- a/packages/core/src/components/tag/_tag.scss
+++ b/packages/core/src/components/tag/_tag.scss
@@ -6,11 +6,12 @@
     font-family: $ray-font-stack-mono;
     border: 1px solid $ray-color-gray-30;
     border-radius: $ray-border-radius;
-    display: inline;
-    padding: $ray-spacing-3xs $ray-spacing-xs;
+    display: inline-block;
+    padding: 0.125rem $ray-spacing-xs;
     text-transform: uppercase;
     font-weight: 400;
-    font-size: 0.875rem;
+    font-size: 0.75rem;
+    line-height: 1.5;
   }
 
   a.#{$ray-class-prefix}tag {
