--- a/packages/core/src/components/breadcrumb/_breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/_breadcrumb.scss
@@ -27,7 +27,7 @@
 
       &::after {
         margin-left: 0.5rem;
-        content: '→';
+        content: '➝';
         font-size: 1.25rem;
         position: relative;
         top: -6px;
@@ -36,7 +36,7 @@
         [dir='rtl'] & {
           margin-right: 0.5rem;
           margin-left: 0;
-          content: '←';
+          transform: scaleX(-1);
         }
       }
     }
