fix(radio): move dot to correct position on rtl

--- a/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
+++ b/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
@@ -166,6 +166,11 @@
       top: $ray-radio-checkbox-top-offset + ($ray-radio-checkbox-size / 2) -
         ($ray-radio-dot-size / 2);
       left: ($ray-radio-checkbox-size / 2) - ($ray-radio-dot-size / 2);
+
+      [dir='rtl'] & {
+        left: auto;
+        right: ($ray-radio-checkbox-size / 2) - ($ray-radio-dot-size / 2);
+      }
     }
   }
 }
