fix(checkbox): add relative positioning for checkmark

--- a/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
+++ b/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
@@ -18,6 +18,7 @@
       line-height: $ray-field-line-height;
       cursor: pointer;
       display: flex;
+      position: relative;
 
       &::before {
         box-sizing: border-box;
