remove link styles from ray buttons

--- a/packages/docs-app/src/styles/_page.scss
+++ b/packages/docs-app/src/styles/_page.scss
@@ -64,7 +64,7 @@ button,
   }
 
   // All links on Markdown pages but not inside component examples
-  & > div > * > a,
+  & > div > * > a:not(.ray-button),
   .page-table td a,
   .page-ul a {
     color: $ray-color-blue-50;
